Configures project for Python 3.13
Updates the project configuration to use Python 3.13 and align
dependencies with the new version. Also adds the postman extension
to the recommended VSCode extensions.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -14,7 +14,8 @@
 		"mechatroner.rainbow-csv",
 		"ms-python.debugpy",
 		"monokai.theme-monokai-pro-vscode",
-		"ms-toolsai.jupyter-renderers",
+        "ms-toolsai.jupyter-renderers",
+        "postman.postman-for-vscode",
      ],
     "unwantedRecommendations": []
 }
