--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ requires-python = ">=3.13"
 dependencies = [
     "pandas>=2.3.1",
     "requests>=2.32.4",
+    "python-dotenv>=1.0.0",
+    "pytz>=2023.3",
 ]
 
 [dependency-groups]
